(PC-5130) Fix spacing between stock deletion dialog box buttons

--- a/src/components/pages/Offer/Offer/Stocks/DeleteStockDialog/DeleteStockDialog.scss
+++ b/src/components/pages/Offer/Offer/Stocks/DeleteStockDialog/DeleteStockDialog.scss
@@ -16,6 +16,8 @@
 
   .action-buttons {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin: rem(30px) auto;
+    width: 65%;
   }
 }
